[tool.poetry]
name = "ampcontrol-project"
version = "0.1.0"
description = ""
authors = ["Michael Toohig <michaeltoohig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
uvicorn = "^0.11.8"
requests = "^2.24.0"
fastapi-users = {extras = ["sqlalchemy2"], version = "^9.3.0"}
alembic = "^1.7.7"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.6.0"
tox = "^3.19.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
